--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-pdf/renderer": "^4.3.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "^0.4.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.38.0",
     "@tanstack/react-query": "^5.8.4",
     "class-variance-authority": "^0.7.1",
@@ -37,15 +37,15 @@
     "dexie-react-hooks": "^1.1.7",
     "dotenv": "^17.2.2",
     "form-data": "^4.0.4",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.294.0",
-    "next": "14.2.5",
+    "next": "^14.2.33",
     "next-pwa": "^5.6.0",
-    "puppeteer": "^21.5.2",
+    "puppeteer": "^24.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
-    "react-pdf": "^7.5.1",
+    "react-pdf": "^10.1.0",
     "recharts": "^2.8.0",
     "resend": "^2.1.0",
     "sonner": "^1.2.0",
